fixing flexslider wrapping

--- a/less/content.less
+++ b/less/content.less
@@ -77,6 +77,9 @@ a.navbar-btn {
   margin-bottom: 0px;
 }
 
-.flexslider .slides img {
-  .thumbnail;
+.flexslider {
+  margin-bottom: 0px;
+  .slides img {
+    .img-responsive;
 }
+} 
